packages/Sympathy/Sympathy-1.6.2-py3-none-any.whl/sympathy_app/Sympathy/Test/Unit/Workflows/errors/exception.syx
<?xml version='1.0' encoding='ASCII'?>
<flow xmlns="http://www.sysess.org/sympathyfordata/workflow/1.0" cls="Flow" height="50.0" id="" is_locked="False" uuid="{6110e6b4-1c0d-4073-b4f4-68bb34190144}" width="50.0" x="0.0" y="0.0">
  <label>exception.syx</label>
  <description></description>
  <author>Unknown</author>
  <copyright></copyright>
  <version>1.0</version>
  <source></source>
  <aggregation type="json"><![CDATA[{}]]></aggregation>
  <libraries type="json"><![CDATA[[]]]></libraries>
  <pythonpaths type="json"><![CDATA[[]]]></pythonpaths>
  <environment type="json"><![CDATA[{}]]></environment>
  <parameters type="json"><![CDATA[{"environment": {}}]]></parameters>
  <ports/>
  <node height="50.0" id="org.sysess.sympathy.examples.errorexample" uuid="{cc82d928-b65c-4576-9591-2e4b77c42573}" width="50.0" x="1825.0" y="1850.0">
    <label>Error example</label>
    <description>Node demonstrating the error handling system.</description>
    <author>Stefan Larsson &lt;stefan.larsson@combine.se&gt;</author>
    <copyright>(C)2011-2012,2015 Combine Control Systems AB</copyright>
    <version>2.0</version>
    <parameters type="json"><![CDATA[{"type": "group", "severity": {"description": "Choose how severe the error is.", "label": "Severity:", "order": 0, "type": "string", "value": "Error", "editor": {"type": "combobox", "options": ["Output", "Warning", "Error", "Exception"]}}, "error_msg": {"description": "This error message will be shown when executing the node", "editor": null, "label": "Error message:", "order": 1, "type": "string", "value": "This is an expected error."}}]]></parameters>
    <ports/>
  </node>
</flow>
